--- a/control
+++ b/control
@@ -4,7 +4,7 @@ Section: web
 Priority: optional
 Architecture: all
 Essential: no
-Depends: python, python-pgsql, python-mysqldb. python-pysqlite2
+Depends: python, python-pgsql, python-mysqldb, python-pysqlite2
 Suggests: mysql-server, postgresql, sqlite3
 Maintainer: Gary Hawkins <gary.hawkins@garyhawkins.me.uk>
 Description: Ofcom codelist.zip to PostgreSQL/MySQL converter
